# sap-odata-explorer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  catalog.rs  client.rs  config.rs  diagnostics.rs  error.rs  lib.rs  lint.rs  metadata.rs  query.rs  session.rs  sspi.rs
crates/core/src/lint/: mod.rs  profile.rs  rules.rs  types.rs
crates/core/src/metadata/: annotations.rs  mod.rs  model.rs
crates/core/src/offline/: delete.rs  import.rs  import_file.rs  mod.rs  paths.rs  read.rs  save.rs  storage.rs  url_sanitize.rs
crates/core/tests/: csrf_redirect.rs  edge_cases.rs  malicious_content.rs  perf_regression.rs  smoke.rs  v2_attributes.rs  v4_annotations.rs
crates/core/tests/common/: mod.rs
crates/core/tests/fixtures/v2/: sales_order.xml
crates/core/tests/fixtures/v4/: tiny.xml  warehouse.xml
docs/: CLI-REFERENCE.md  RELEASE-CHECKLIST.md  SAP-VIEW.md  SHOWCASE.md
packaging/winget/manifests/k/kts982/SAPODataExplorer/0.1.0/: kts982.SAPODataExplorer.installer.yaml  kts982.SAPODataExplorer.locale.en-US.yaml  kts982.SAPODataExplorer.yaml
scripts/: lint-innerhtml.mjs  stage-release-assets.mjs  test-safe-html.mjs
skills/sap-odata-cli/: SKILL.md
tauri-app/: package-lock.json  package.json  tailwind.config.js
tauri-app/scripts/: build-css.cjs  vendor-tauri.cjs
tauri-app/src/: addProfile.js  annotations.js  api.js  app.js  auth.js  clipboard.js  describe.js  executor.js  favorites.js  fiori.js  format.js  history.js  html.js  index.html  input.css  offline.js  query.js  resultCache.js  results.js  services.js  state.js  status.js  tabs.js  trace.js  valueList.js
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
