[workspace]
members = ["crates/core", "crates/cli", "tauri-app/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
sap-odata-core = { path = "crates/core" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies", "json"] }
roxmltree = "0.20"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
toml = "0.8"
keyring = { version = "3", features = ["windows-native"] }
directories = "6"
base64 = "0.22"

[workspace.dependencies.windows]
version = "0.61"
features = [
  "Win32_Security_Authentication_Identity",
  "Win32_Security_Credentials",
]
