[package]
name = "sap-odata-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sap-odata"
path = "src/main.rs"

[dependencies]
sap-odata-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
comfy-table.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dialoguer.workspace = true
