[package]
name = "sap-odata-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line SAP OData explorer: service discovery, metadata browsing, queries, annotations lint, service health checks, offline EDMX — a fast alternative to /IWFND/GW_CLIENT"
readme = "../../README.md"
keywords = ["sap", "odata", "cli", "gateway", "abap"]
categories = ["command-line-utilities"]

[[bin]]
name = "sap-odata"
path = "src/main.rs"

[dependencies]
sap-odata-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
comfy-table.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dialoguer.workspace = true
