[package]
name = "sap-odata-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
roxmltree.workspace = true
tracing.workspace = true
url.workspace = true
toml.workspace = true
keyring.workspace = true
directories.workspace = true
base64.workspace = true
flate2.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
