[package]
name = "sap-odata-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
roxmltree.workspace = true
tracing.workspace = true
url.workspace = true
percent-encoding.workspace = true
toml.workspace = true
keyring.workspace = true
directories.workspace = true
base64.workspace = true
flate2.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
# In-process HTTP mock server for integration tests. Each `MockServer::start()`
# binds a fresh local port, so tests are isolated by construction. Used by
# `tests/` to exercise the request-path code (auth, CSRF roundtrip, redirects,
# error envelopes) without hitting a real SAP system.
wiremock = "0.6"
tokio = { workspace = true }
