[package]
name = "sap-odata-explorer-app"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sap-odata-core = { path = "../../crates/core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
custom-protocol = ["tauri/custom-protocol"]
